fixed aligned card title left

--- a/src/app/home/homepage/homepage.component.scss
+++ b/src/app/home/homepage/homepage.component.scss
@@ -18,6 +18,6 @@ img {
   margin-bottom: 5%;
 }
 
-mat-card-subtitle {
+mat-card-title, mat-card-subtitle {
   text-align: left;
 }
